--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -39,7 +39,7 @@
     fill: green;
     height: 5rem;
     width: 5rem;
-    background: url(../../img/001-tree.svg);
+    background: url(../img/001-tree.svg);
 }
 
 .icon-clean{
@@ -48,7 +48,7 @@
     fill: green;
     height: 5rem;
     width: 5rem;
-    background: url(../../img/002-clean.svg);
+    background: url(../img/002-clean.svg);
 }
 
 .icon-pet{
@@ -57,7 +57,7 @@
     fill: green;
     height: 5rem;
     width: 5rem;
-    background: url(../../img/003-dog.svg);
+    background: url(../img/003-dog.svg);
 }
 
 .icon-secure{
@@ -66,5 +66,5 @@
     fill: green;
     height: 5rem;
     width: 5rem;
-    background: url(../../img/004-guard.svg);
+    background: url(../img/004-guard.svg);
 }
