--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,7 +10,7 @@
         to right,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)),
-        url(../../img/hero.jpg);
+        url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -30,7 +30,7 @@
         to right,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)),
-        url(../../img/hero.jpg);
+        url(../img/hero.jpg);
     }
 
     @include respond(phone){
