--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -26,26 +26,21 @@
     }
 
 
-    &__shape{
+    &__shape {
         width: 15rem;
         height: 15rem;
         float: left;
-        
-        //The shape outside  only works if you use the float positioning,
-        //and if the element has defined measures height and width
-        
-        transform: translateX(-3rem) skew(12deg);
+        transform: translateX(-3rem) skewX(12deg);
         position: relative;
-        text-align: center;
-        backface-visibility: hidden;
         overflow: hidden;
         border-radius: 50%;
 
-        @supports   (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)){
+        @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
             -webkit-clip-path: circle(50% at 50% 50%);
-            clip-path: circle(45% at 50% 50%); 
+            clip-path: circle(50% at 50% 50%);
             -webkit-shape-outside: circle(50% at 50% 50%);
-            shape-outside: circle(50% at 50% 50%);         
+            shape-outside: circle(50% at 50% 50%);
+            border-radius: none;
         }
 
         @include respond(tab-port){
@@ -53,7 +48,8 @@
         }
     }
     
-
+//The shape outside  only works if you use the float positioning,
+        //and if the element has defined measures height and width
     &__img{
         height: 100%;
         transform: translateX(-4rem) scale(1.4);
