--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -209,17 +209,26 @@ body {
     padding-top: 2rem;
     display: inline-block;
     display: flex;
-    justify-content: center; }
+    justify-content: flex-start;
+    flex-wrap: wrap; }
     @media screen and (max-width: 56.25em) {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
   .footer__list {
-    list-style: none; }
+    list-style: none;
+    display: flex;
+    padding: 2rem 0; }
   .footer__item {
-    display: inline-block; }
+    display: inline-block;
+    flex-basis: 50%;
+    display: flex;
+    flex-wrap: wrap; }
     .footer__item:not(:last-child) {
       margin-right: 1.5rem; }
+  .footer__company {
+    display: flex;
+    padding-bottom: 2rem; }
   .footer__link:link, .footer__link:visited {
     color: #f7f7f7;
     background-color: #333;
@@ -249,9 +258,12 @@ body {
         text-align: center;
         float: none; } }
 
+#company {
+  margin-bottom: 3rem; }
+
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -475,19 +487,19 @@ transform: translate(-50%,-50%);
       padding: 10rem 0; } }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../../img/book.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/book.jpg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
   @media screen and (max-width: 75em) {
     .book {
-      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg); } }
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/book.jpg); } }
   @media screen and (max-width: 56.25em) {
     .book {
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10-small.jpg); } }
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small.jpg); } }
   @media screen and (max-width: 37.5em) {
     .book {
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10-small.jpg); } }
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small.jpg); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
@@ -738,7 +750,7 @@ or purple (after clicked)
         .card__picture--1 {
           background-image: url(../img/vacuum.png), linear-gradient(to right bottom, #ffb900, #ff7730); } }
     .card__picture--2 {
-      background-image: url(../img/blind.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); }
+      background-image: url(../img/blind-small.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); }
       @media screen and (min-width: 40em) {
         .card__picture--2 {
           background-image: url(../img/blind.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); } }
