--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ body {
 
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small.jpg);
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-small-min.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -290,7 +290,7 @@ transform: translate(-50%,-50%);
       height: 95vh; } }
   @media screen and (min-resolution: 192dpi) and (min-width: 56.25em), (-webkit-min-devide-pixel-ratio: 2) and (min-width: 56.25em), (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg); } }
+      background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero-min.jpg); } }
   @media screen and (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
@@ -497,19 +497,19 @@ transform: translate(-50%,-50%);
       padding: 10rem 0; } }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/book.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/book-min.jpg);
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
   @media screen and (max-width: 75em) {
     .book {
-      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/book.jpg); } }
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/book-min.jpg); } }
   @media screen and (max-width: 56.25em) {
     .book {
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small.jpg); } }
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small-min.jpg); } }
   @media screen and (max-width: 37.5em) {
     .book {
-      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small.jpg); } }
+      background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/book-small-min.jpg); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
@@ -755,20 +755,20 @@ or purple (after clicked)
     border-top-left-radius: 3px;
     border-top-right-radius: 3px; }
     .card__picture--1 {
-      background-image: url(../img/vacuum.png), linear-gradient(to right bottom, #ffb900, #ff7730); }
+      background-image: url(../img/vacuum-min.png), linear-gradient(to right bottom, #ffb900, #ff7730); }
       @media screen and (min-width: 40em) {
         .card__picture--1 {
-          background-image: url(../img/vacuum.png), linear-gradient(to right bottom, #ffb900, #ff7730); } }
+          background-image: url(../img/vacuum-min.png), linear-gradient(to right bottom, #ffb900, #ff7730); } }
     .card__picture--2 {
-      background-image: url(../img/blind-small.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); }
+      background-image: url(../img/blind-small-min.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); }
       @media screen and (min-width: 40em) {
         .card__picture--2 {
-          background-image: url(../img/blind.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); } }
+          background-image: url(../img/blind-min.jpg), linear-gradient(to right bottom, #7ed56f, #28b485); } }
     .card__picture--3 {
-      background-image: url(../img/oven.png), linear-gradient(to right bottom, #2998ff, #5643fa); }
+      background-image: url(../img/oven-min.png), linear-gradient(to right bottom, #2998ff, #5643fa); }
       @media screen and (min-width: 40em) {
         .card__picture--3 {
-          background-image: url(../img/oven.png), linear-gradient(to right bottom, #2998ff, #5643fa); } }
+          background-image: url(../img/oven-min.png), linear-gradient(to right bottom, #2998ff, #5643fa); } }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -1005,6 +1005,10 @@ or purple (after clicked)
 
 .form__radio-input {
   visibility: hidden; }
+
+#text {
+  height: 10rem;
+  resize: none; }
 
 .popup {
   height: 100vh;
